# myINF3480

./: README.md
Groupsessions-2020/: README.md
Groupsessions-2020/Intro/: One_Dudes_Opinion_On_Further_Math_Study_Relevant_To_Robotics.xlsx  Readme.md
Groupsessions-2020/ROS/: README.md  tutorial_for_basic_project.md
Groupsessions-2020/control theory/: readme.md
Groupsessions-2020/dynamics/: README.md
Groupsessions-2020/forward kinematics/: readme.md
Groupsessions-2020/inverse kinematics/: readme.md
Groupsessions-2020/transformations/: README.md
Groupsessions-2020/velocity kinematics/: README.md
TEST-ROSNoetic-pid_assignment-master/: README.md
TEST-ROSNoetic-pid_assignment-master/pid_assignment/: CMakeLists.txt  package.xml
TEST-ROSNoetic-pid_assignment-master/pid_assignment/cfg/: Pid.cfg
TEST-ROSNoetic-pid_assignment-master/pid_assignment/launch/: crustcrawler.perspective  pid.launch  setup.launch  test.perspective
TEST-ROSNoetic-pid_assignment-master/pid_assignment/src/: fixer.py  node.py  pid.py
crustcrawler_documentation-master/: README.md
crustcrawler_hardware-master/: README.md
crustcrawler_hardware-master/config/: analyzers.yaml  trajectory.perspective
crustcrawler_hardware-master/launch/: control.launch  monitoring.launch  trajectory_gui.launch
crustcrawler_hardware-master/src/: controller_node.cpp  crustcrawler.cpp  dynamixel.cpp
crustcrawler_moveit-master/: CMakeLists.txt  package.xml
crustcrawler_moveit-master/config/: controllers.yaml  crustcrawler.srdf  fake_controllers.yaml  joint_limits.yaml
crustcrawler_moveit-master/launch/: crustcrawler_moveit_controller_manager.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  (+2 more)
crustcrawler_pen_moveit-master/: CMakeLists.txt  README.md  package.xml
public-exams-and-solutions-master/: README.md
ros_tutorial-master/: README.md
(+42 files in other folders)
